# AuraAlphaDesktop

./: .gitignore  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: release.yml  test.yml
grid_worker/: .env.template  README.md  aura-grid-worker.spec  worker.py
scripts/: setup-macos-signing.sh
sidecar/: install_worker.ps1  research_worker.py
sidecar/standalone/: adaptive_throttle.py  api_client.py  config.py  worker.py
src/: App.jsx  index.css  index.html  index.html.old  main.jsx  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/: research_worker.py
src-tauri/sidecar/standalone/: backtest_engine.py  worker.py
src-tauri/src/: bot_manager.rs  credential_store.rs  lib.rs  main.rs
src/components/: BotStatusCard.jsx  CommandPalette.jsx  DataTable.jsx  MetricTile.jsx  NavBar.jsx  PanelMenu.jsx  StatusDot.jsx
src/contexts/: AuthContext.jsx  PreferencesContext.jsx
src/docking/: WorkspaceManager.jsx  defaultLayout.js  dockTheme.css  panelRegistry.js
src/hooks/: useAlerts.js  useBacktests.js  useBrokerSetup.js  useChartData.js  useLiveBots.js  useLocalBots.js  usePositions.js  useScanners.js  useStrategies.js  useWatchlists.js
src/pages/: BotManagerPage.jsx  BrokerSetupPage.jsx  DashboardPage.jsx  LoginPage.jsx
src/panels/: AlertsPanel.jsx  BacktestPanel.jsx  BotCommandPanel.jsx  BotManagerPanel.jsx  BrokerSetupPanel.jsx  ChartPanel.jsx  PositionsPanel.jsx  ScannerPanel.jsx  (+2 more)
tests/: smoke.test.js
(+5 files in other folders)
