[package]
name = "aura-alpha-desktop"
version = "1.3.0"
description = "Aura Alpha Trading Desk"
authors = ["Aura Alpha"]
edition = "2021"

[lib]
name = "aura_alpha_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
dirs = "5"
log = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
